load-tests/h2_h2_passthrough/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    metadata:
      labels:
        logs: "true"
    spec:
      containers:
      - name: "h2-h2-passthrou-deployment"
        imagePullPolicy: Always
